make login fields more user friendly

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/username"
+        android:nextFocusDown="@+id/password"
+        android:singleLine="true"
         android:layout_marginTop="60dp"
         android:hint="username"
         android:textSize="20dp"
@@ -34,6 +36,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/password"
+        android:singleLine="true"
         android:layout_marginTop="60dp"
         android:hint="password"
         android:textSize="20dp"
