--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -24,6 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/new_user_username"
+        android:singleLine="true"
+        android:nextFocusDown="@+id/new_user_password"
         android:inputType="textNoSuggestions"
         android:layout_marginTop="40dp"
         android:hint="username"
@@ -34,6 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/new_user_password"
+        android:singleLine="true"
+        android:nextFocusDown="@+id/new_user_height"
         android:layout_marginTop="40dp"
         android:hint="password"
         android:textSize="20dp"
@@ -46,6 +50,8 @@
         android:id="@+id/new_user_height"
         android:layout_marginTop="40dp"
         android:hint="height (centimeters)"
+        android:singleLine="true"
+        android:nextFocusDown="@+id/new_user_sex_radio_group"
         android:textSize="20dp"
         android:inputType="number"
         android:layout_below="@+id/new_user_password"/>
