--- a/app/src/main/res/layout/activity_daily_stats.xml
+++ b/app/src/main/res/layout/activity_daily_stats.xml
@@ -12,7 +12,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Hello"
         android:id="@+id/daily_stats_greetings"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -23,7 +22,6 @@
         android:layout_height="wrap_content"
         android:id="@+id/daily_stats_steps_taken"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Steps Taken:"
         android:layout_below="@+id/daily_stats_greetings"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"/>
@@ -32,7 +30,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Distance Walked:"
         android:id="@+id/daily_stats_disntace_walked"
         android:layout_below="@+id/daily_stats_steps_taken"
         android:layout_centerHorizontal="true"
@@ -42,7 +39,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Distance Walked (feet):"
         android:id="@+id/daily_stats_disntace_walked_feet"
         android:layout_below="@+id/daily_stats_disntace_walked"
         android:layout_centerHorizontal="true"
@@ -52,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Past Record:"
+        android:text="@string/step_stats_label"
         android:id="@+id/textView"
         android:layout_marginTop="10dp"
         android:layout_below="@+id/daily_stats_disntace_walked_feet"
