--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/titleText"
-        android:text="Fitness Application"
+        android:text="@string/login_page_title"
         android:layout_alignParentEnd="true"
         android:layout_alignParentStart="true"
         android:textAlignment="center"
@@ -28,17 +28,19 @@
         android:nextFocusDown="@+id/password"
         android:singleLine="true"
         android:layout_marginTop="60dp"
-        android:hint="username"
+        android:typeface="monospace"
+        android:hint="@string/username_field"
         android:textSize="20dp"
         android:layout_below="@+id/titleText"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:typeface="monospace"
         android:id="@+id/password"
         android:singleLine="true"
         android:layout_marginTop="60dp"
-        android:hint="password"
+        android:hint="@string/password_field"
         android:textSize="20dp"
         android:password="true"
         android:inputType="textNoSuggestions"
@@ -47,7 +49,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Login"
+        android:text="@string/login_button_text"
         android:id="@+id/login_button"
         android:layout_below="@+id/password"
         android:layout_alignParentStart="true"
@@ -58,7 +60,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="New User"
+        android:text="@string/new_user_button_text"
         android:id="@+id/new_user_button"
         android:layout_below="@+id/login_button"
         android:layout_alignParentStart="true"
