--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -28,7 +28,7 @@
         android:nextFocusDown="@+id/new_user_password"
         android:inputType="textNoSuggestions"
         android:layout_marginTop="40dp"
-        android:hint="username"
+        android:hint="@string/username_field"
         android:textSize="20dp"
         android:layout_below="@+id/new_user_title_text"/>
 
@@ -39,7 +39,7 @@
         android:singleLine="true"
         android:nextFocusDown="@+id/new_user_height"
         android:layout_marginTop="40dp"
-        android:hint="password"
+        android:hint="@string/password_field"
         android:textSize="20dp"
         android:password="true"
         android:layout_below="@+id/new_user_username"/>
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/new_user_height"
         android:layout_marginTop="40dp"
-        android:hint="height (centimeters)"
+        android:hint="@string/height_field"
         android:singleLine="true"
         android:nextFocusDown="@+id/new_user_sex_radio_group"
         android:textSize="20dp"
@@ -83,7 +83,7 @@
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="@string/submit_button_text"
         android:id="@+id/new_user_submit_button"
         android:layout_below="@+id/new_user_sex_radio_group"
         android:layout_alignParentStart="true"
